@@ -1,17 +1,20 @@
 package no.nav.melosys.domain.arkiv;
 
+import java.nio.charset.StandardCharsets;
 import java.util.Base64;
 import java.util.Collections;
 import java.util.List;
 
+import no.nav.melosys.domain.behandlingsgrunnlag.Behandlingsgrunnlag;
 import no.nav.melosys.domain.eessi.SedType;
 import no.nav.melosys.domain.msm.AltinnDokument;
 
-import static no.nav.melosys.domain.arkiv.DokumentVariant.lagArkivVariant;
+import static no.nav.melosys.domain.arkiv.DokumentVariant.lagDokumentVariant;
 
 public class FysiskDokument extends ArkivDokument {
     private static final String DOKUMENT_KATEGORI_SED = "SED";
     private static final String DOKUMENT_KATEGORI_SOKNAD = "SOK";
+    private static final String DOKUMENT_KATEGORI_INFOBREV = "IB";
 
     private List<DokumentVariant> dokumentVarianter;
     private String brevkode;
@@ -22,7 +25,25 @@ public class FysiskDokument extends ArkivDokument {
         fysiskDokument.setDokumentKategori(DOKUMENT_KATEGORI_SED);
         fysiskDokument.setTittel(hentTittelForSedType(sedType));
         fysiskDokument.setBrevkode(sedType.name());
-        fysiskDokument.setDokumentVarianter(Collections.singletonList(lagArkivVariant(sedPdf)));
+        fysiskDokument.setDokumentVarianter(Collections.singletonList(lagDokumentVariant(sedPdf)));
+        return fysiskDokument;
+    }
+
+    static FysiskDokument lagFysiskHovedDokumentAltinn(AltinnDokument altinnDokument,
+                                                  Behandlingsgrunnlag behandlingsgrunnlag) {
+        FysiskDokument fysiskDokument = new FysiskDokument();
+        fysiskDokument.setDokumentKategori(DOKUMENT_KATEGORI_SOKNAD);
+        fysiskDokument.setTittel(hentTittelForAltinnDokument(altinnDokument.getDokumentType()));
+        byte[] innhold = Base64.getDecoder().decode(altinnDokument.getInnhold());
+        var dokumentVarianter = List.of(
+            lagDokumentVariant(innhold),
+            lagDokumentVariant(
+                behandlingsgrunnlag.getOriginalData().getBytes(StandardCharsets.UTF_8),
+                DokumentVariant.Filtype.XML,
+                DokumentVariant.VariantFormat.ORIGINAL
+            )
+        );
+        fysiskDokument.setDokumentVarianter(dokumentVarianter);
         return fysiskDokument;
     }
 
@@ -31,7 +52,16 @@ public class FysiskDokument extends ArkivDokument {
         fysiskDokument.setDokumentKategori(DOKUMENT_KATEGORI_SOKNAD);
         fysiskDokument.setTittel(hentTittelForAltinnDokument(altinnDokument.getDokumentType()));
         byte[] innhold = Base64.getDecoder().decode(altinnDokument.getInnhold());
-        fysiskDokument.setDokumentVarianter(Collections.singletonList(lagArkivVariant(innhold)));
+        fysiskDokument.setDokumentVarianter(Collections.singletonList(lagDokumentVariant(innhold)));
+        return fysiskDokument;
+    }
+
+    static FysiskDokument lagInfoBrevPdf(String tittel, String brevkode, byte[] pdf) {
+        FysiskDokument fysiskDokument = new FysiskDokument();
+        fysiskDokument.setDokumentKategori(DOKUMENT_KATEGORI_INFOBREV);
+        fysiskDokument.setTittel(tittel);
+        fysiskDokument.setBrevkode(brevkode);
+        fysiskDokument.setDokumentVarianter(Collections.singletonList(lagDokumentVariant(pdf)));
         return fysiskDokument;
     }
 
